--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <div class="desc">
                 <b><a rel="external" href="https://arxiv.org/abs/2104.02004" target="_blank">Learning of Causal Observable Functions for Koopman-DFL Lifting Linearization of Nonlinear Controlled Systems and Its Application to Excavation Automation</a></b><br>
                 Nicholas Selby and Harry Asada<br>
-                <a rel="external" href="http://www.ieee-ras.org/publications/ra-l" target="_blank">IEEE Robotics and Automation Letters</a> 6 (4), 6297-6304, 2021.<br>
+                <a rel="external" href="http://www.ieee-ras.org/publications/ra-l" target="_blank">IEEE Robotics and Automation Letters</a> 6 (4), 6297–6304, 2021.<br>
                 <a href="homepage/l3.bib" target="_blank">BibTeX</a>
             </div>
         </div>
@@ -116,7 +116,7 @@
             <div class="desc">
                 <b><a href="homepage/xducer.pdf" download target="_blank">Determination of Absolute Material Nonlinearity with Air-Coupled Ultrasonic Receivers</a></b><br>
                 David Torello, Nicholas Selby, Jin-Yeon Kim, Jianmin Qu, and Laurence J. Jacobs<br>
-                <a rel="external" href="https://www.journals.elsevier.com/ultrasonics" target="_blank">Ultrasonics</a> 81, 107-117, 2017.<br>
+                <a rel="external" href="https://www.journals.elsevier.com/ultrasonics" target="_blank">Ultrasonics</a> 81, 107–117, 2017.<br>
                 <a href="homepage/xducer.bib" target="_blank">BibTeX</a>
             </div>
         </div>
@@ -186,7 +186,7 @@
             <img src="homepage/cs1371.jpg" title="GTW" alt="Computer showing code in a text editor">
             <div class="desc">
                 <b>Computer Science for Engineers</b><br>
-                <i>Georgia Institute of Technology</i>, <a rel="external" href="https://www.cc.gatech.edu/fac/David.Smith/CS1371_2018_Fall_Syllabus.pdf" target="_blank">CS 1371</a>, <i>Spring 2013-Spring 2016</i><br>
+                <i>Georgia Institute of Technology</i>, <a rel="external" href="https://www.cc.gatech.edu/fac/David.Smith/CS1371_2018_Fall_Syllabus.pdf" target="_blank">CS 1371</a>, <i>Spring 2013–Spring 2016</i><br>
                 Key Concepts: MATLAB, computing fundamentals, algorithms<br>
                 Median Student Evaluation: 5/5
             </div>
