--- a/index.html
+++ b/index.html
@@ -209,6 +209,7 @@
         <h1>Professional Service</h1>
         Journal Referee [<a rel="external" href="https://publons.com/researcher/3507536/nicholas-selby/peer-review/" target="_blank">Publons</a>]:
         <ul>
+            <li><a rel="external" href="https://car.osu.edu/AAC2022" target="_blank">IFAC International Symposium on Advances in Automotive Control</a></li>
             <li><a rel="external" href="https://www.mtns2022.uni-bayreuth.de/en/index.html" target="_blank">International Symposium on Mathematical Theory of Networks and Systems</a></li>
             <li><a rel="external" href="https://www.iros2021.org/" target="_blank">IEEE International Conference on Intelligent Robots and Systems</a></li>
             <li><a rel="external" href="https://dl.acm.org/journal/tosn" target="_blank">ACM Transactions on Sensor Networks</a></li>
