--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <div class="item">
             <img src="homepage/rfly.jpg" title="CC BY-4.0. Credit: MIT Media Lab/Fadel Adib and Jimmy Day" alt="Drone with a mounted PCB">
             <div class="desc">
-                <b><a href="homepage/rfly.pdf" download target="_blank">Drone Relays for Battery-Free Networkss</a></b><br>
+                <b><a href="homepage/rfly.pdf" download target="_blank">Drone Relays for Battery-Free Networks</a></b><br>
                 Yunfei Ma, Nicholas Selby, and Fadel Adib<br>
                 <a rel="external" href="http://conferences.sigcomm.org/sigcomm/2017/" target="_blank">ACM Conference on Applications, Technologies, Architectures, and Protocols for Computer Communication</a>, Los Angeles, CA, USA, 2017<br>
                 <a href="homepage/rfly.bib" target="_blank">BibTeX</a>
