aria-label and accessibility improvements

--- a/capstone.html
+++ b/capstone.html
@@ -73,7 +73,7 @@
 
     <p>We verified our system by flying it at Cobb County RC field. The drone system followed a series of user-generated flight paths and demonstrated a variety of safety features such as auto-landing and come-home commands to ensure the system will remain under the control of the operator in emergency situations. In addition, the image-stitching and area measurement software was verified using sample images generated from the Google Maps aerial photography dataset.</p>
 
-    <p>You can download the full project report <a href="project-pages/capstone-report.pdf" download target="_blank">here</a>. All of our software is open source on <a rel="external" href="https://github.com/rupumped/AerialMapping" target="_blank">GitHub</a>.</p>
+    <p>To learn more about the project, <a href="project-pages/capstone-report.pdf" download target="_blank">read our report</a>. All of our software is open source on <a aria-label="GitHub repository" rel="external" href="https://github.com/rupumped/AerialMapping" target="_blank">GitHub</a>.</p>
 
     <img class="img-full-width" src="project-pages/capstone-action.jpg" alt="A drone piloted by one of three men in a field">
     
