--- a/eqr.html
+++ b/eqr.html
@@ -63,7 +63,7 @@
         
     <p>EQR codes are 100% secure. Unlike other medical records services and apps, EQR does not store your information on any server. Instead, EQR leverages physical layer security, encoding all of the information you enter into the EQR code itself. The only way to access your medical information is to scan the EQR.</p>
 
-    <p>Check out the project homepage and make yourself an EQR for free by clicking <a rel="external" href="https://rupumped.github.io/EQR/" target="_blank">here</a>.</p>
+    <p>To learn more about the project and make yourself an EQR for free, visit the <a rel="external" href="https://rupumped.github.io/EQR/" target="_blank">project homepage</a>.</p>
     
 	<footer>
 		<p><a rel="license" target="_blank" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" target="_blank" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.</p>
