--- a/gtsr.html
+++ b/gtsr.html
@@ -79,7 +79,7 @@
 
     <p>During the last two years in my career as an undergraduate student at Georgia Tech, I had the honor of serving as the Chief Engineer of the Georgia Tech Solar Racing team. I led over ninety interdisciplinary students to design, build, and race a solar powered car from scratch. My job was both managerial and technical: a single day could include closing out an iteration of fluids modelling on the aerobody, teaching a group of my peers how to weld structural tubing, and taking meetings with sponsors to update them on our progress. The activity allowed me to practice using engineering concepts discussed in classes like Deformable Bodies and System Dynamics and teach others to do the same. During my tenure as chief engineer, we doubled our recruitment both years by implementing a revolutionary training curriculum, increased fundraising tenfold by formalizing Business and Community Outreach arms of the organization, and brought a team that completed one lap at Nationals to a team that completed 27.</p>
     
-    <p>Check out the team's current progress on their <a rel="external" href="http://solarracing.gatech.edu/" target="_blank">website</a>.</p>
+    <p>Check out the team's current progress on the <a rel="external" href="http://solarracing.gatech.edu/" target="_blank">GT Solar Racing homepage</a>.</p>
     
 	<footer>
 		<p><a rel="license" target="_blank" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" target="_blank" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.</p>
