--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
             Email: <a rel="author" href="mailto:nicholas.selby@renewvia.com" target="_blank">nicholas.selby@renewvia.com</a></p>
             <div class="separator"></div>
             <div id="social-media-wrapper">
-                <a rel="external" href="https://www.linkedin.com/in/nicholas-selby-5278b334/" target="_blank"><img src="homepage/icon-linkedin.png" alt="LinkedIn icon"></a>
-                <a rel="external" href="https://scholar.google.com/citations?user=SKcs1pEAAAAJ" target="_blank"><img src="homepage/icon-googlescholar.png" alt="Google Scholar icon"></a>
-                <a rel="external" href="https://github.com/rupumped" target="_blank"><img src="homepage/icon-github.png" alt="GitHub icon"></a>
-                <a href="homepage/nselby-cv.pdf" download target="_blank"><img src="homepage/icon-cv.png" alt="Icon of a CV"></a>
+                <a aria-label="My LinkedIn profile" rel="external" href="https://www.linkedin.com/in/nicholas-selby-5278b334/" target="_blank"><img src="homepage/icon-linkedin.png" alt="LinkedIn icon"></a>
+                <a aria-label="My Google Scholar Profile" rel="external" href="https://scholar.google.com/citations?user=SKcs1pEAAAAJ" target="_blank"><img src="homepage/icon-googlescholar.png" alt="Google Scholar icon"></a>
+                <a aria-label="My GitHub profile" rel="external" href="https://github.com/rupumped" target="_blank"><img src="homepage/icon-github.png" alt="GitHub icon"></a>
+                <a aria-label="My CV" href="homepage/nselby-cv.pdf" download target="_blank"><img src="homepage/icon-cv.png" alt="Icon of a CV"></a>
             </div>
         </div>
     </div>
@@ -69,7 +69,7 @@
                 <b><a rel="external" href="https://arxiv.org/abs/2104.02004" target="_blank">Learning of Causal Observable Functions for Koopman-DFL Lifting Linearization of Nonlinear Controlled Systems and Its Application to Excavation Automation</a></b><br>
                 Nicholas Selby and Harry Asada<br>
                 <a rel="external" href="http://www.ieee-ras.org/publications/ra-l" target="_blank">IEEE Robotics and Automation Letters</a> 6 (4), 6297–6304, 2021.<br>
-                <a href="homepage/l3.bib" target="_blank">BibTeX</a>
+                <a href="homepage/l3.bib" aria-label="BibTeX for paper titled &quot;Learning of Causal Observable Functions for Koopman-DFL Lifting Linearization of Nonlinear Controlled Systems and Its Application to Excavation Automation&quot;" target="_blank">BibTeX</a>
             </div>
         </div>
 
@@ -81,7 +81,7 @@
                 <b><a rel="external" href="https://www.sciencedirect.com/science/article/pii/S2405844021016868" target="_blank">TeachBot: Towards Teaching Robotics Fundamentals for Human-Robot Collaboration at Work</a></b><br>
                 Nicholas Selby, Jerry Ng, Glenda S Stump, George Westerman, Claire Traweek, and Harry Asada<br>
                 <a rel="external" href="https://www.sciencedirect.com/journal/heliyon" target="_blank">Heliyon</a> 7 (7), e07583, 2021.<br>
-                <a href="homepage/teachbot.bib" target="_blank">BibTeX</a>
+                <a href="homepage/teachbot.bib" aria-label="BibTeX for paper titled &quot;TeachBot: Towards Teaching Robotics Fundamentals for Human-Robot Collaboration at Work&quot;" target="_blank">BibTeX</a>
             </div>
         </div>
 
@@ -93,7 +93,7 @@
                 <b><a href="homepage/rfind.pdf" download target="_blank">Minding the Billions: Ultra-wideband Localization in Deployed RFID Tags</a></b><br>
                 Yunfei Ma, Nicholas Selby, and Fadel Adib<br>
                 <a rel="external" href="https://sigmobile.org/mobicom/2017/" target="_blank">International Conference on Mobile Computing and Networking</a>, Snowbird, UT, USA, 2017<br>
-                <a href="homepage/rfind.bib" target="_blank">BibTeX</a>
+                <a href="homepage/rfind.bib" aria-label="BibTeX for paper titled &quot;Minding the Billions: Ultra-wideband Localization in Deployed RFID Tags&quot;" target="_blank">BibTeX</a>
             </div>
         </div>
 
@@ -105,7 +105,7 @@
                 <b><a href="homepage/rfly.pdf" download target="_blank">Drone Relays for Battery-Free Networks</a></b><br>
                 Yunfei Ma, Nicholas Selby, and Fadel Adib<br>
                 <a rel="external" href="http://conferences.sigcomm.org/sigcomm/2017/" target="_blank">ACM Conference on Applications, Technologies, Architectures, and Protocols for Computer Communication</a>, Los Angeles, CA, USA, 2017<br>
-                <a href="homepage/rfly.bib" target="_blank">BibTeX</a>
+                <a href="homepage/rfly.bib" aria-label="BibTeX for paper titled &quot;Drone Relays for Battery-Free Networks&quot;" target="_blank">BibTeX</a>
             </div>
         </div>
 
@@ -117,7 +117,7 @@
                 <b><a href="homepage/xducer.pdf" download target="_blank">Determination of Absolute Material Nonlinearity with Air-Coupled Ultrasonic Receivers</a></b><br>
                 David Torello, Nicholas Selby, Jin-Yeon Kim, Jianmin Qu, and Laurence J. Jacobs<br>
                 <a rel="external" href="https://www.journals.elsevier.com/ultrasonics" target="_blank">Ultrasonics</a> 81, 107–117, 2017.<br>
-                <a href="homepage/xducer.bib" target="_blank">BibTeX</a>
+                <a href="homepage/xducer.bib" aria-label="BibTeX for paper titled &quot;Determination of Absolute Material Nonlinearity with Air-Coupled Ultrasonic Receivers&quot;" target="_blank">BibTeX</a>
             </div>
         </div>
 
@@ -129,7 +129,7 @@
                 <b><a href="homepage/dualaxis.pdf" download target="_blank"><i>In Situ</i> Biaxial Rotation at Low-Temperatures in High Magnetic Fields</a></b><br>
                 Nicholas Selby, Matthew Crawford, Lisa Tracy, John L. Reno, and Wei Pan<br>
                 <a rel="external" href="https://aip.scitation.org/journal/rsi" target="_blank">Review of Scientific Instruments</a> 85 (9), 095116, 2014.<br>
-                <a href="homepage/dualaxis.bib" target="_blank">BibTeX</a>
+                <a href="homepage/dualaxis.bib" aria-label="BibTeX for paper titled &quot;In Situ Biaxial Rotation at Low-Temperatures in High Magnetic Fields&quot;" target="_blank">BibTeX</a>
             </div>
         </div>
     </div>
@@ -137,8 +137,8 @@
     <div id="patents" class="section">
         <h1>Patents</h1>
         <ul>
-            <li>"Methods and Apparatus for Wideband Localization." Zhihong Luo, Qiping Zhang, Nicholas Selby, Yunfei Ma, Manish Singh, and Fadel Adib. U.S. Patent Nos. <a rel="external" href="https://patents.google.com/patent/US10575277B2/" target="_blank">10,575,277</a>, <a href="https://patents.google.com/patent/US10921419B2/" target="_blank">10,921,419</a>, and <a rel="external" href="https://patents.google.com/patent/US10701662B2/" target="_blank">10,701,662</a>. Published 2020 and 2021.</li>
-            <li>"Full-Duplex, Bi-Directional, Analog Relay." Yunfei Ma, Nicholas Selby, and Fadel Adib. U.S. Patent No. <a rel="external" href="https://patents.google.com/patent/US10389429B2/" target="_blank">10,389,429</a>. Published 2019.</li>
+            <li>"Methods and Apparatus for Wideband Localization." Zhihong Luo, Qiping Zhang, Nicholas Selby, Yunfei Ma, Manish Singh, and Fadel Adib. U.S. Patent Nos. <a rel="external" href="https://patents.google.com/patent/US10575277B2/" target="_blank" aria-label="Patent #10,575,277">10,575,277</a>, <a href="https://patents.google.com/patent/US10921419B2/" target="_blank" aria-label="Patent #10,921,419">10,921,419</a>, and <a rel="external" href="https://patents.google.com/patent/US10701662B2/" target="_blank" aria-label="Patent #10,701,662">10,701,662</a>. Published 2020 and 2021.</li>
+            <li>"Full-Duplex, Bi-Directional, Analog Relay." Yunfei Ma, Nicholas Selby, and Fadel Adib. U.S. Patent No. <a rel="external" href="https://patents.google.com/patent/US10389429B2/" target="_blank" aria-label="Patent #10,389,429">10,389,429</a>. Published 2019.</li>
         </ul>
     </div>
 
@@ -162,7 +162,7 @@
             <img src="homepage/2160.jpg" title="NASA/JPL/Cornell University, Maas Digital LLC" alt="Mars rover">
             <div class="desc">
                 <b>Identification, Estimation, and Learning</b><br>
-                <i>Massachusetts Institute of Technology</i>, <a rel="external" href="https://ocw.mit.edu/courses/mechanical-engineering/2-160-identification-estimation-and-learning-spring-2006/" target="_blank">2.160</a>, <i>Fall 2019</i><br>
+                <i>Massachusetts Institute of Technology</i>, <a aria-label="Syllabus for course titled &quot;Identification, Estimation, and Learning&quot;" rel="external" href="https://ocw.mit.edu/courses/mechanical-engineering/2-160-identification-estimation-and-learning-spring-2006/" target="_blank">2.160</a>, <i>Fall 2019</i><br>
                 Key Concepts: machine learning, Kalman filters, system identification<br>
                 Median Student Evaluation: 7/7
             </div>
@@ -174,7 +174,7 @@
             <img src="homepage/2140.jpg" title="Ti Consiglio un Lavoro" alt="Students interacting with a circuit and oscilloscope">
             <div class="desc">
                 <b>Analysis and Design of Feedback Control Systems</b><br>
-                <i>Massachusetts Institute of Technology</i>, <a rel="external" href="https://ocw.mit.edu/courses/mechanical-engineering/2-14-analysis-and-design-of-feedback-control-systems-spring-2014/" target="_blank">2.140</a>, <i>Spring 2017</i><br>
+                <i>Massachusetts Institute of Technology</i>, <a aria-label="Syllabus for course titled &quot;Analysis and Design of Feedback Control Systems&quot;" rel="external" href="https://ocw.mit.edu/courses/mechanical-engineering/2-14-analysis-and-design-of-feedback-control-systems-spring-2014/" target="_blank">2.140</a>, <i>Spring 2017</i><br>
                 Key Concepts: time and frequency domain analysis, root locus and loop shaping, stability, nonlinearity, digital systems<br>
                 Median Student Evaluation: 7/7
             </div>
@@ -186,7 +186,7 @@
             <img src="homepage/cs1371.jpg" title="GTW" alt="Computer showing code in a text editor">
             <div class="desc">
                 <b>Computer Science for Engineers</b><br>
-                <i>Georgia Institute of Technology</i>, <a rel="external" href="https://www.cc.gatech.edu/fac/David.Smith/CS1371_2018_Fall_Syllabus.pdf" target="_blank">CS 1371</a>, <i>Spring 2013–Spring 2016</i><br>
+                <i>Georgia Institute of Technology</i>, <a aria-label="Syllabus for course titled &quot;Computer Science for Engineers&quot;" rel="external" href="https://www.cc.gatech.edu/fac/David.Smith/CS1371_2018_Fall_Syllabus.pdf" target="_blank">CS 1371</a>, <i>Spring 2013–Spring 2016</i><br>
                 Key Concepts: MATLAB, computing fundamentals, algorithms<br>
                 Median Student Evaluation: 5/5
             </div>
@@ -198,7 +198,7 @@
             <img src="homepage/phys2211.jpg" title="NASA/JPL-Caltech" alt="Galaxies bending spacetime">
             <div class="desc">
                 <b>Introductory Physics</b><br>
-                <i>Georgia Institute of Technology</i>, <a rel="external" href="http://www.introphys.gatech.edu/2017/Spring/2211/Schedule/schedule.html" target="_blank">PHYS 2211</a>, <i>Spring 2014</i><br>
+                <i>Georgia Institute of Technology</i>, <a aria-label="Syllabus for course titled &quot;Introductory Physics&quot;" rel="external" href="http://www.introphys.gatech.edu/2017/Spring/2211/Schedule/schedule.html" target="_blank">PHYS 2211</a>, <i>Spring 2014</i><br>
                 Key Concepts: calculus-based classical mechanics, oscillations, waves<br>
                 Median Student Evaluation: 5/5
             </div>
