--- a/lowtemp.html
+++ b/lowtemp.html
@@ -114,7 +114,7 @@
     </div>
 
     <h1>Results</h1>
-    <p>The device worked. We were able to deploy a sample in a cryogenic tank and rotate it about both axes independently in extreme cold and high magnetic field. Our results were published in <i>Review of Scientific Instruments</i>, a journal of the American Institute of Physics. You can download the paper by clicking <a href="homepage/dualaxis.pdf" download target="_blank">here</a>.</p>
+    <p>The device worked. We were able to deploy a sample in a cryogenic tank and rotate it about both axes independently in extreme cold and high magnetic field. Our results were published in <i>Review of Scientific Instruments</i>, a journal of the American Institute of Physics. To learn more about the project, <a href="homepage/dualaxis.pdf" download target="_blank">read our paper</a>.</p>
     
 	<footer>
 		<p><a rel="license" target="_blank" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" target="_blank" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.</p>
