--- a/tinynets.html
+++ b/tinynets.html
@@ -101,7 +101,7 @@
     <div class="centered section">
         <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/4Rnn4MHgGAw" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
-    <p>You can download the full project report <a href="project-pages/tinynets-report.pdf" target="_blank" download>here</a>. Download our code and CAD files to try it yourself on <a rel="external" href="https://github.com/jakeread/tinynets" target="_blank">our GitHub repository</a>.</p>
+    <p>To learn more about the project, <a href="project-pages/tinynets-report.pdf" target="_blank" download>read our paper</a>. Download our code and CAD files to try it yourself on <a rel="external" href="https://github.com/jakeread/tinynets" target="_blank">our GitHub repository</a>.</p>
     
 	<footer>
 		<p><a rel="license" target="_blank" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" target="_blank" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.</p>
