--- a/selected-work.html
+++ b/selected-work.html
@@ -43,7 +43,7 @@
     <p class="centered"><i>click on an image to read more about the project</i></p>
 
     <div id="selected-work-container">
-        <a class="project" href="teachbot.html">
+        <a class="project" aria-label="TeachBot" href="teachbot.html">
             <img src="selected-work/teachbot.jpg" alt="Man interacting with a collaborative manufacturing robot">
             <div class="proj-overlay">
 				<div class="hashtags">#robotics #advanced-manufacturing #education</div>
@@ -51,7 +51,7 @@
 			</div>
         </a>
 		
-        <a class="project" href="rfind.html">
+        <a class="project" aria-label="RFind" href="rfind.html">
             <img src="selected-work/rfind.jpg" alt="Smart phone displaying a schematic of a living room">
             <div class="proj-overlay">
 				<div class="hashtags">#rfid #networking #artificial-intelligence</div>
@@ -59,7 +59,7 @@
 			</div>
         </a>
 		
-        <a class="project" href="rfly.html">
+        <a class="project" aria-label="RFly" href="rfly.html">
             <img src="selected-work/rfly.jpg" alt="Drone outfitted with a PCB">
             <div class="proj-overlay">
 				<div class="hashtags">#rfid #drones #networking</div>
@@ -67,7 +67,7 @@
 			</div>
         </a>
 		
-        <a class="project" href="ndte.html">
+        <a class="project" aria-label="Nondestructive Testing" href="ndte.html">
             <img src="selected-work/ndte.jpg" alt="Aluminum fastened in an acoustic experimental apparatus">
             <div class="proj-overlay">
 				<div class="hashtags">#acoustics #signal-processing #structures</div>
@@ -75,7 +75,7 @@
 			</div>
         </a>
 		
-        <a class="project" href="lowtemp.html">
+        <a class="project" aria-label="Quantum Computing" href="lowtemp.html">
             <img src="selected-work/lowtemp.jpg" alt="Custom device for measuring the fractional quantum Hall effect">
             <div class="proj-overlay">
 				<div class="hashtags">#quantum #design</div>
@@ -83,7 +83,7 @@
 			</div>
         </a>
 		
-        <a class="project" href="capstone.html">
+        <a class="project" aria-label="Aerial Mapping" href="capstone.html">
             <img src="selected-work/capstone.jpg" alt="Drone being piloted by one of three men in a field">
             <div class="proj-overlay">
 				<div class="hashtags">#drones #artificial-intelligence #global-health</div>
@@ -91,7 +91,7 @@
 			</div>
         </a>
 		
-        <a class="project" href="tinynets.html">
+        <a class="project" aria-label="TinyNets" href="tinynets.html">
             <img src="selected-work/tinynets.jpg" alt="PCB held against a purple background">
             <div class="proj-overlay">
 				<div class="hashtags">#distributed-systems #networking</div>
@@ -99,7 +99,7 @@
 			</div>
         </a>
 		
-        <a class="project" href="gtsr.html">
+        <a class="project" aria-label="Solar Racing" href="gtsr.html">
             <img src="selected-work/gtsr.jpg" alt="Solar racecar">
             <div class="proj-overlay">
 				<div class="hashtags">#solar #automotive #leadership</div>
@@ -107,7 +107,7 @@
 			</div>
         </a>
 		
-        <a class="project" href="eqr.html">
+        <a class="project" aria-label="Emergency QR" href="eqr.html">
             <img src="selected-work/eqr.jpg" alt="Gloved hand holding a wallet and a card with a QR labeled Emergency Medical Information SCAN ME">
             <div class="proj-overlay">
 				<div class="hashtags">#public-health #web-development</div>
