Reduce div/class dependence
Replaces divs and classes with better-suited HTML elements
Remove conditional comments
Use h2 headers
Section project pages
Fix project page title bug in mobile dark mode
Fix project page title overflow in mobile
Update TeachBot

--- a/capstone.html
+++ b/capstone.html
@@ -13,11 +13,6 @@
 	<!-- Favicon -->
 	<link rel="icon" href="./favicon.ico" type="image/x-icon">
 
-	<!--[if lt IE 9]>
-	<script src="http://html5shim.googlecode.com/svn/trunk/html5.js">
-	</script>
-	<![endif]-->
-
 	<!-- Fonts -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -28,23 +23,23 @@
 	<link rel="stylesheet" type="text/css" href="project-pages/project-page.css">
 </head>
 <body>
-	<div id="header">
+	<header>
         <div id="name">NICHOLAS S SELBY</div>
-        <div id="navigation">
-            <a class="nav-link" href="index.html">HOME</a>
-            <a class="nav-link" href="about.html">ABOUT ME</a>
-            <a class="nav-link" href="selected-work.html">SELECTED WORK</a>
-            <a class="nav-link" href="blog.html">BLOG</a>
-            <a class="nav-link" href="service.html">SERVICE</a>
-        </div>
-    </div>
+        <nav>
+            <a href="index.html">HOME</a>
+            <a href="about.html">ABOUT ME</a>
+            <a href="selected-work.html">SELECTED WORK</a>
+            <a href="blog.html">BLOG</a>
+            <a href="service.html">SERVICE</a>
+        </nav>
+    </header>
 
     <div class="cover section">
         <img src="project-pages/capstone-cover.jpg" alt="A drone flying in the sky">
-        <div class="title">​Aerial Mapping System for Urban Environments</div>
+        <h1>​Aerial Mapping System for Urban Environments</h1>
     </div>
 
-    <h1>Skills Demonstrated</h1>
+    <h2>Skills Demonstrated</h2>
     <div class="skills">
         <div class="skill">UAVs</div>
         <div class="bullet"></div>
