--- a/index.html
+++ b/index.html
@@ -13,11 +13,6 @@
 	<!-- Favicon -->
 	<link rel="icon" href="./favicon.ico" type="image/x-icon">
 
-	<!--[if lt IE 9]>
-	<script src="http://html5shim.googlecode.com/svn/trunk/html5.js">
-	</script>
-	<![endif]-->
-
 	<!-- Fonts -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -28,16 +23,16 @@
 	<link rel="stylesheet" type="text/css" href="homepage/home.css">
 </head>
 <body>
-	<div id="header">
+	<header>
         <div id="name">NICHOLAS S SELBY</div>
-        <div id="navigation">
-            <a class="nav-link active-link" href="index.html">HOME</a>
-            <a class="nav-link" href="about.html">ABOUT ME</a>
-            <a class="nav-link" href="selected-work.html">SELECTED WORK</a>
-            <a class="nav-link" href="blog.html">BLOG</a>
-            <a class="nav-link" href="service.html">SERVICE</a>
-        </div>
-    </div>
+        <nav>
+            <a class="active-link" href="index.html">HOME</a>
+            <a href="about.html">ABOUT ME</a>
+            <a href="selected-work.html">SELECTED WORK</a>
+            <a href="blog.html">BLOG</a>
+            <a href="service.html">SERVICE</a>
+        </nav>
+    </header>
 
     <div id="title-card" class="section">
         <img id="headshot" src="homepage/headshot.jpeg" alt="My professional headshot">
@@ -61,8 +56,8 @@
         I am the Director of Engineering at Renewvia Energy. I am responsible for the design, procurement, construction, productive use, and software infrastructure of solar minigrids in rural Kenya and Nigeria. I have a B.S. in Mechanical Engineering from the Georgia Institute of Technology, an M.S. in Mechanical Engineering from MIT, and a Ph.D. in Electrical Engineering and Computer Science from MIT. I have worked as a research engineer for NASA's Jet Propulsion Laboratory and Sandia National Laboratories.
     </div>
 
-    <div id="publications" class="section">
-        <h1>Publications</h1>
+    <section id="publications">
+        <h2>Publications</h2>
         <div class="item">
             <img src="homepage/l3.jpg" alt="Illustration of the Learned Lifting Linearization algorithm">
             <div class="desc">
@@ -132,18 +127,18 @@
                 <a href="homepage/dualaxis.bib" aria-label="BibTeX for paper titled &quot;In Situ Biaxial Rotation at Low-Temperatures in High Magnetic Fields&quot;" target="_blank">BibTeX</a>
             </div>
         </div>
-    </div>
+    </section>
 
-    <div id="patents" class="section">
-        <h1>Patents</h1>
+    <section id="patents">
+        <h2>Patents</h2>
         <ul>
             <li>"Methods and Apparatus for Wideband Localization." Zhihong Luo, Qiping Zhang, Nicholas Selby, Yunfei Ma, Manish Singh, and Fadel Adib. U.S. Patent Nos. <a rel="external" href="https://patents.google.com/patent/US10575277B2/" target="_blank" aria-label="Patent #10,575,277">10,575,277</a>, <a href="https://patents.google.com/patent/US10921419B2/" target="_blank" aria-label="Patent #10,921,419">10,921,419</a>, and <a rel="external" href="https://patents.google.com/patent/US10701662B2/" target="_blank" aria-label="Patent #10,701,662">10,701,662</a>. Published 2020 and 2021.</li>
             <li>"Full-Duplex, Bi-Directional, Analog Relay." Yunfei Ma, Nicholas Selby, and Fadel Adib. U.S. Patent No. <a rel="external" href="https://patents.google.com/patent/US10389429B2/" target="_blank" aria-label="Patent #10,389,429">10,389,429</a>. Published 2019.</li>
         </ul>
-    </div>
+    </section>
 
-    <div id="awards" class="section">
-        <h1>Awards</h1>
+    <section id="awards">
+        <h2>Awards</h2>
         <ul>
             <li>First Place, MIT Mechanical Engineering Research Exhibition, 2019.</li>
             <li>Graduate Research Fellowship Honorable Mention, National Science Foundation, 2016.</li>
@@ -154,10 +149,10 @@
             <li>Best Utility Simulation for Product Design, ASME 2014 International Design & Engineering Technical Conferences & Computers & Information in Engineering Conference, 2014.</li>
             <li>Stamps Leadership Scholarship, Stamps Family Charitable Foundation, Inc., 2013. Merit-based, full cost of university attendance awarded to top 12 of 14,731 applicants.</li>
         </ul>
-    </div>
+    </section>
 
-    <div id="teaching" class="section">
-        <h1>Teaching</h1>
+    <section id="teaching">
+        <h2>Teaching</h2>
         <div class="item">
             <img src="homepage/2160.jpg" title="NASA/JPL/Cornell University, Maas Digital LLC" alt="Mars rover">
             <div class="desc">
@@ -203,10 +198,10 @@
                 Median Student Evaluation: 5/5
             </div>
         </div>
-    </div>
+    </section>
 
-    <div id="service" class="section">
-        <h1>Professional Service</h1>
+    <section id="service">
+        <h2>Professional Service</h2>
         Journal Referee [<a rel="external" href="https://publons.com/researcher/3507536/nicholas-stearns-selby/peer-review/" target="_blank">Publons</a>]:
         <ul>
             <li><a rel="external" href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=6979" target="_blank">IEEE Transactions on Intelligent Transportation Systems</a></li>
@@ -217,7 +212,7 @@
             <li><a rel="external" href="https://www.computer.org/web/tmc" target="_blank">IEEE Transactions on Mobile Computing</a></li>
             <li><a rel="external" href="https://ieee-iotj.org/" target="_blank">IEEE Internet of Things Journal</a></li>
         </ul>
-    </div>
+    </section>
 
 	<footer>
 		<p><a rel="license" target="_blank" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" target="_blank" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.</p>
