--- a/about.html
+++ b/about.html
@@ -13,11 +13,6 @@
 	<!-- Favicon -->
 	<link rel="icon" href="./favicon.ico" type="image/x-icon">
 
-	<!--[if lt IE 9]>
-	<script src="http://html5shim.googlecode.com/svn/trunk/html5.js">
-	</script>
-	<![endif]-->
-
 	<!-- Fonts -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -28,16 +23,16 @@
 	<link rel="stylesheet" type="text/css" href="about/about.css">
 </head>
 <body>
-	<div id="header">
+	<header>
         <div id="name">NICHOLAS S SELBY</div>
-        <div id="navigation">
-            <a class="nav-link" href="index.html">HOME</a>
-            <a class="nav-link active-link" href="about.html">ABOUT ME</a>
-            <a class="nav-link" href="selected-work.html">SELECTED WORK</a>
-            <a class="nav-link" href="blog.html">BLOG</a>
-            <a class="nav-link" href="service.html">SERVICE</a>
-        </div>
-    </div>
+        <nav>
+            <a href="index.html">HOME</a>
+            <a class="active-link" href="about.html">ABOUT ME</a>
+            <a href="selected-work.html">SELECTED WORK</a>
+            <a href="blog.html">BLOG</a>
+            <a href="service.html">SERVICE</a>
+        </nav>
+    </header>
 
     <div id="quote-container" class="section">
         <div id="quote-symbol">"</div>
