--- a/rfind.html
+++ b/rfind.html
@@ -13,11 +13,6 @@
 	<!-- Favicon -->
 	<link rel="icon" href="./favicon.ico" type="image/x-icon">
 
-	<!--[if lt IE 9]>
-	<script src="http://html5shim.googlecode.com/svn/trunk/html5.js">
-	</script>
-	<![endif]-->
-
 	<!-- Fonts -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -28,23 +23,23 @@
 	<link rel="stylesheet" type="text/css" href="project-pages/project-page.css">
 </head>
 <body>
-	<div id="header">
+	<header>
         <div id="name">NICHOLAS S SELBY</div>
-        <div id="navigation">
-            <a class="nav-link" href="index.html">HOME</a>
-            <a class="nav-link" href="about.html">ABOUT ME</a>
-            <a class="nav-link" href="selected-work.html">SELECTED WORK</a>
-            <a class="nav-link" href="blog.html">BLOG</a>
-            <a class="nav-link" href="service.html">SERVICE</a>
-        </div>
-    </div>
+        <nav>
+            <a href="index.html">HOME</a>
+            <a href="about.html">ABOUT ME</a>
+            <a href="selected-work.html">SELECTED WORK</a>
+            <a href="blog.html">BLOG</a>
+            <a href="service.html">SERVICE</a>
+        </nav>
+    </header>
 
     <div class="cover section">
         <img src="project-pages/rfind-cover.jpg" alt="Hand holding smartphone showing a schematic of a living room">
-        <div class="title">RFind</div>
+        <h1>RFind</h1>
     </div>
 
-    <h1>Skills Demonstrated</h1>
+    <h2>Skills Demonstrated</h2>
     <div class="skills">
         <div class="skill">Artificial Intelligence</div>
         <div class="bullet"></div>
