--- a/service.html
+++ b/service.html
@@ -13,11 +13,6 @@
 	<!-- Favicon -->
 	<link rel="icon" href="./favicon.ico" type="image/x-icon">
 
-	<!--[if lt IE 9]>
-	<script src="http://html5shim.googlecode.com/svn/trunk/html5.js">
-	</script>
-	<![endif]-->
-
 	<!-- Fonts -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -28,78 +23,80 @@
 	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
-	<div id="header">
+	<header>
         <div id="name">NICHOLAS S SELBY</div>
-        <div id="navigation">
-            <a class="nav-link" href="index.html">HOME</a>
-            <a class="nav-link" href="about.html">ABOUT ME</a>
-            <a class="nav-link" href="selected-work.html">SELECTED WORK</a>
-            <a class="nav-link" href="blog.html">BLOG</a>
-            <a class="nav-link active-link" href="service.html">SERVICE</a>
+        <nav>
+            <a href="index.html">HOME</a>
+            <a href="about.html">ABOUT ME</a>
+            <a href="selected-work.html">SELECTED WORK</a>
+            <a href="blog.html">BLOG</a>
+            <a class="active-link" href="service.html">SERVICE</a>
+        </nav>
+    </header>
+
+    <section>
+        <h2>Clubes de Ciencia</h2>
+
+        <img class="img-full-width" src="service/teaching-2.jpg" alt="Me teaching a class using a projector">
+        <div class="gallery">
+            <a href="service/teaching-0.jpg" target="_blank">
+                <img src="service/teaching-0.jpg" alt="Me talking to a small group of students">
+            </a>
+            <a href="service/teaching-1.jpg" target="_blank">
+                <img src="service/teaching-1.jpg" alt="Me giving a lecture to a class">
+            </a>
+            <a href="service/teaching-3.jpg" target="_blank">
+                <img src="service/teaching-3.jpg" alt="Me teaching students how to solder">
+            </a>
+            <a href="service/experiment-0.jpg" target="_blank">
+                <img src="service/experiment-0.jpg" alt="Students learning to solder">
+            </a>
+            <a href="service/experiment-1.jpg" target="_blank">
+                <img src="service/experiment-1.jpg" alt="Students using an oscilloscope">
+            </a>
+            <a href="service/experiment-2.jpg" target="_blank">
+                <img src="service/experiment-2.jpg" alt="An oscilloscope running">
+            </a>
+            <a href="service/sensor-0.jpeg" target="_blank">
+                <img src="service/sensor-0.jpeg" alt="Student blowing into a sensor">
+            </a>
+            <a href="service/sensor-1.jpeg" target="_blank">
+                <img src="service/sensor-1.jpeg" alt="Student holding a sensor to an exhaust pipe">
+            </a>
+            <a href="service/sensor-2.jpg" target="_blank">
+                <img src="service/sensor-2.jpg" alt="Students testing sensor in a restroom">
+            </a>
+            <a href="service/sensor-3.jpeg" target="_blank">
+                <img src="service/sensor-3.jpeg" alt="A sensor next to an exhaust pipe">
+            </a>
+            <a href="service/sensor-4.jpeg" target="_blank">
+                <img src="service/sensor-4.jpeg" alt="A custom noise sensor">
+            </a>
+            <a href="service/presentation-0.jpg" target="_blank">
+                <img src="service/presentation-0.jpg" alt="Students giving a presentation on air pollution">
+            </a>
+            <a href="service/presentation-1.jpg" target="_blank">
+                <img src="service/presentation-1.jpg" alt="Student giving a presentation on engineering tools">
+            </a>
+            <a href="service/presentation-2.jpg" target="_blank">
+                <img src="service/presentation-2.jpg" alt="Student giving a presentation on air pollution with colorful graphics">
+            </a>
+            <a href="service/group-0.jpg" target="_blank">
+                <img src="service/group-0.jpg" alt="Large group of students and instructors">
+            </a>
+            <a href="service/group-1.jpg" target="_blank">
+                <img src="service/group-1.jpg" alt="My class">
+            </a>
         </div>
-    </div>
 
-    <h1>Clubes de Ciencia</h1>
+        <p>Clubes de Ciencia México (CdeCMx) is a non-profit organization that seeks to encourage Mexican students to pursue professional careers in STEM. I volunteer in the summers as an instructor with CdeCMx to teach high school and college students in Mérida how to design, prototype, and deploy custom devices to monitor public health in a city. I partner with a local co-instructor, Rodrigo Gamboa Torres, to construct a curriculum for and teach a week-long class titled "Citizen Science: Monitoring Public Health in Your City."</p>
 
-    <img class="img-full-width" src="service/teaching-2.jpg" alt="Me teaching a class using a projector">
-    <div class="gallery">
-        <a href="service/teaching-0.jpg" target="_blank">
-            <img src="service/teaching-0.jpg" alt="Me talking to a small group of students">
-        </a>
-        <a href="service/teaching-1.jpg" target="_blank">
-            <img src="service/teaching-1.jpg" alt="Me giving a lecture to a class">
-        </a>
-        <a href="service/teaching-3.jpg" target="_blank">
-            <img src="service/teaching-3.jpg" alt="Me teaching students how to solder">
-        </a>
-        <a href="service/experiment-0.jpg" target="_blank">
-            <img src="service/experiment-0.jpg" alt="Students learning to solder">
-        </a>
-        <a href="service/experiment-1.jpg" target="_blank">
-            <img src="service/experiment-1.jpg" alt="Students using an oscilloscope">
-        </a>
-        <a href="service/experiment-2.jpg" target="_blank">
-            <img src="service/experiment-2.jpg" alt="An oscilloscope running">
-        </a>
-        <a href="service/sensor-0.jpeg" target="_blank">
-            <img src="service/sensor-0.jpeg" alt="Student blowing into a sensor">
-        </a>
-        <a href="service/sensor-1.jpeg" target="_blank">
-            <img src="service/sensor-1.jpeg" alt="Student holding a sensor to an exhaust pipe">
-        </a>
-        <a href="service/sensor-2.jpg" target="_blank">
-            <img src="service/sensor-2.jpg" alt="Students testing sensor in a restroom">
-        </a>
-        <a href="service/sensor-3.jpeg" target="_blank">
-            <img src="service/sensor-3.jpeg" alt="A sensor next to an exhaust pipe">
-        </a>
-        <a href="service/sensor-4.jpeg" target="_blank">
-            <img src="service/sensor-4.jpeg" alt="A custom noise sensor">
-        </a>
-        <a href="service/presentation-0.jpg" target="_blank">
-            <img src="service/presentation-0.jpg" alt="Students giving a presentation on air pollution">
-        </a>
-        <a href="service/presentation-1.jpg" target="_blank">
-            <img src="service/presentation-1.jpg" alt="Student giving a presentation on engineering tools">
-        </a>
-        <a href="service/presentation-2.jpg" target="_blank">
-            <img src="service/presentation-2.jpg" alt="Student giving a presentation on air pollution with colorful graphics">
-        </a>
-        <a href="service/group-0.jpg" target="_blank">
-            <img src="service/group-0.jpg" alt="Large group of students and instructors">
-        </a>
-        <a href="service/group-1.jpg" target="_blank">
-            <img src="service/group-1.jpg" alt="My class">
-        </a>
-    </div>
+        <p>Students drew on personal experience to select public health problems facing their city. Upon rigorously defining the issues about which they were passionate, they divided into teams to design, code, and prototype devices to collect public health data. In one week, students developed working prototypes to measure carbon pollution and particulate matter in the city center, record loud noise levels late at night, and investigate methane leaks near septic tanks. But they didn't stop there. Each team also created a scientific presentation which they delivered to local citizens in a town hall event at the end of the week illustrating their data and its practical implications, as well as propose researched policy solutions.</p>
 
-    <p>Clubes de Ciencia México (CdeCMx) is a non-profit organization that seeks to encourage Mexican students to pursue professional careers in STEM. I volunteer in the summers as an instructor with CdeCMx to teach high school and college students in Mérida how to design, prototype, and deploy custom devices to monitor public health in a city. I partner with a local co-instructor, Rodrigo Gamboa Torres, to construct a curriculum for and teach a week-long class titled "Citizen Science: Monitoring Public Health in Your City."</p>
+        <p>Our students performed phenomenal work and several of them have continued their projects with hopes of collecting more data and presenting at a national science fair. As scientists, we wield powerful tools to which most people do not have access. It is therefore our responsibility to use those tools to benefit our communities.</p>
 
-    <p>Students drew on personal experience to select public health problems facing their city. Upon rigorously defining the issues about which they were passionate, they divided into teams to design, code, and prototype devices to collect public health data. In one week, students developed working prototypes to measure carbon pollution and particulate matter in the city center, record loud noise levels late at night, and investigate methane leaks near septic tanks. But they didn't stop there. Each team also created a scientific presentation which they delivered to local citizens in a town hall event at the end of the week illustrating their data and its practical implications, as well as propose researched policy solutions.</p>
-
-    <p>Our students performed phenomenal work and several of them have continued their projects with hopes of collecting more data and presenting at a national science fair. As scientists, we wield powerful tools to which most people do not have access. It is therefore our responsibility to use those tools to benefit our communities.</p>
-
-    <p>Links: <a rel="external" href="https://www.clubesdeciencia.mx/" target="_blank">Clubes de Ciencia México</a>, <a rel="external" href="https://spacemonkeyr.wordpress.com/" target="_blank">Rodrigo Gamboa Torres</a></p>
+        <p>Links: <a rel="external" href="https://www.clubesdeciencia.mx/" target="_blank">Clubes de Ciencia México</a>, <a rel="external" href="https://spacemonkeyr.wordpress.com/" target="_blank">Rodrigo Gamboa Torres</a></p>
+    </section>
 
 	<footer>
 		<p><a rel="license" target="_blank" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" target="_blank" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.</p>
