--- a/teachbot.html
+++ b/teachbot.html
@@ -13,11 +13,6 @@
 	<!-- Favicon -->
 	<link rel="icon" href="./favicon.ico" type="image/x-icon">
 
-	<!--[if lt IE 9]>
-	<script src="http://html5shim.googlecode.com/svn/trunk/html5.js">
-	</script>
-	<![endif]-->
-
 	<!-- Fonts -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -28,23 +23,23 @@
 	<link rel="stylesheet" type="text/css" href="project-pages/project-page.css">
 </head>
 <body>
-	<div id="header">
+	<header>
         <div id="name">NICHOLAS S SELBY</div>
-        <div id="navigation">
-            <a class="nav-link" href="index.html">HOME</a>
-            <a class="nav-link" href="about.html">ABOUT ME</a>
-            <a class="nav-link" href="selected-work.html">SELECTED WORK</a>
-            <a class="nav-link" href="blog.html">BLOG</a>
-            <a class="nav-link" href="service.html">SERVICE</a>
-        </div>
-    </div>
+        <nav>
+            <a href="index.html">HOME</a>
+            <a href="about.html">ABOUT ME</a>
+            <a href="selected-work.html">SELECTED WORK</a>
+            <a href="blog.html">BLOG</a>
+            <a href="service.html">SERVICE</a>
+        </nav>
+    </header>
 
     <div class="cover section">
         <img src="project-pages/teachbot-cover.jpg" alt="A student interacting with a collaborative manufacturing robot">
-        <div class="title">TeachBot</div>
+        <h1>TeachBot</h1>
     </div>
 
-    <h1>Skills Demonstrated</h1>
+    <h2>Skills Demonstrated</h2>
     <div class="skills">
         <div class="skill">Robotics & Control</div>
         <div class="bullet"></div>
@@ -67,45 +62,48 @@
 
     <div class="separator"></div>
 
+    <p>Working under the direction of Professor Harry Asada at MIT, I designed, developed, tested, and deployed a robotic workforce training solution for collaborative manufacturing.</p>
+
     <div class="centered section">
         <iframe width="560" height="315" style="margin: auto;" src="https://www.youtube-nocookie.com/embed/qiIvc157bzc" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 
-    <h1>Motivation</h1>
-    <p>During my PhD, I worked in the d'Arbeloff Lab at MIT under the direction of Professor Harry Asada to develop a robotic apprentice education and training system called TeachBot. At present, we have developed a working prototype system and are currently deploying to our industry partners.</p>
-    <p>By 2025, Deloitte and The Manufacturing Institute estimates nearly 3.5 million manufacturing jobs will be needed in the US, but only 1.5 million are expected to be filled. The remaining 2 million jobs will likely not be realized due to a lack of skilled workers trained to work with robots. Despite this dearth in skilled labor, the International Federation of Robotics found that growth in automated manufacturing industries is accelerating. Other countries, particularly those in Europe, fill the gap between labor supply and demand with robust apprenticeship programs that the US notoriously lacks, and this leads domestic manufacturers to outsource system integration to consulting firms. This is both costly and short-term: if the manufacturer needs to tweak or repair the already-integrated automated system, all of the knowledge necessary to do so is external to the organization, so the manufacturer must pay the consultants again to return and modify the system. This absurd process leads us to ask, "Why can't manufacturing workers themselves be trained to perform system integration tasks?"</p>
-    <p>Because I have never worked on a manufacturing line myself, I found customer interviews with the small and medium manufacturing firms we are targeting, extremely helpful. I discovered that an important, intuitive understanding is missing that would enable workers to design and improve manufacturing processes. A solution to this problem must:</p>
-    <ol>
-        <li><b>Teach workers necessary skills</b> like feedback control,</li>
-        <li><b>Enable workers to perform real tasks</b> like pick-and-place operations,</li>
-        <li><b>Make learners feel engaged</b>, and</li>
-        <li><b>Be priced appropriately</b> for the (generally smaller) manufacturers who need skilled workers.</li>
-    </ol>
+    <section>
+        <h2>Motivation</h2>
+        <p>By 2025, Deloitte and The Manufacturing Institute estimates nearly 3.5 million manufacturing jobs will be needed in the US, but only 1.5 million are expected to be filled. The remaining 2 million jobs will likely not be realized due to a lack of skilled workers trained to work with robots. Despite this dearth in skilled labor, the International Federation of Robotics found that growth in automated manufacturing industries is accelerating. Other countries, particularly those in Europe, fill the gap between labor supply and demand with robust apprenticeship programs that the US notoriously lacks, and this leads domestic manufacturers to outsource system integration to consulting firms. This is both costly and short-term: if the manufacturer needs to tweak or repair the already-integrated automated system, all of the knowledge necessary to do so is external to the organization, so the manufacturer must pay the consultants again to return and modify the system. This absurd process leads us to ask, "Why can't manufacturing workers themselves be trained to perform system integration tasks?"</p>
+        <p>Because I have never worked on a manufacturing line myself, I found customer interviews with the small and medium manufacturing firms we are targeting, extremely helpful. I discovered that an important, intuitive understanding is missing that would enable workers to design and improve manufacturing processes. A solution to this problem must:</p>
+        <ol>
+            <li><b>Teach workers necessary skills</b> like feedback control,</li>
+            <li><b>Enable workers to perform real tasks</b> like pick-and-place operations,</li>
+            <li><b>Make learners feel engaged</b>, and</li>
+            <li><b>Be priced appropriately</b> for the (generally smaller) manufacturers who need skilled workers.</li>
+        </ol>
+    </section>
 
-    <div class="section"></div>
+    <section>
+        <h2>Solution</h2>
+        <p>After doing a careful analysis of existing products and diving deep into the relevant teaching science literature, we designed a fully autonomous robotic instructor to teach workers on a manufacturing line how to use robots effectively. Our system consists of a collaborative robot system (e.g. RethinkRobotics Sawyer, Universal Robot, ABB Yumi, etc.), a computer with an internet connection, a projector to display educational graphics, and peripheral devices like conveyor belts and CNC equipment to simulate a real manufacturing environment.</p>
+        <div class="centered">
+            <img src="project-pages/teachbot-hardware-overview.jpg" alt="Hardware overview of the TeachBot system including a robot, computer, projector, and peripherals">
+        </div>
+        <p>A previously-thought-of-as-critical piece of hardware is missing from our bill of materials: a human instructor. The robot serves as both teacher and demonstration machine, leveraging its existence as a robotic system to teach robotics more effectively. Rather than exclusively relying on diagrams and lectures to illustrate concepts like playback control and waypoints, TeachBot guides learners to interact with a physical embodiment of the concepts about which they are learning. As we demonstrate, TeachBot's "learning by touching" curriculum is superior to more traditional teaching methods.</p>
+    </section>
 
-    <h1>Solution</h1>
-    <p>After doing a careful analysis of existing products and diving deep into the relevant teaching science literature, we designed a fully autonomous robotic instructor to teach workers on a manufacturing line how to use robots effectively. Our system consists of a collaborative robot system (e.g. RethinkRobotics Sawyer, Universal Robot, ABB Yumi, etc.), a computer with an internet connection, a projector to display educational graphics, and peripheral devices like conveyor belts and CNC equipment to simulate a real manufacturing environment.</p>
-    <div class="centered">
-        <img src="project-pages/teachbot-hardware-overview.jpg" alt="Hardware overview of the TeachBot system including a robot, computer, projector, and peripherals">
-    </div>
-    <p>A previously-thought-of-as-critical piece of hardware is missing from our bill of materials: a human instructor. The robot serves as both teacher and demonstration machine, leveraging its existence as a robotic system to teach robotics more effectively. Rather than exclusively relying on diagrams and lectures to illustrate concepts like playback control and waypoints, TeachBot guides learners to interact with a physical embodiment of the concepts about which they are learning. As we demonstrate, TeachBot's "learning by touching" curriculum is superior to more traditional teaching methods.</p>
+    <section>
+        <h2>Evaluation</h2>
+        <p>To evaluate our solution, we leveraged our relationships with our industry sponsors to collect human subjects for randomized control trials. Subjects were divided randomly into two groups: (1) a control group that watched a traditional video lecture and (2) an experimental group that took the TeachBot learning module. Both groups were given a pre- and post-test to evaluate how much they learned and how each learning method affected their self-efficacy regarding robotics.</p>
+        <div class="centered">
+            <img src="project-pages/teachbot-results.jpg" alt="Two plots showing improvement in self-efficacy and learning gain of the experimental group relative to the control group with p<0.05 and p<0.20, respectively">
+        </div>
+        <p>Our results demonstrate that <b>people learn significantly more from TeachBot</b> than they do from traditional video lectures. Furthermore, TeachBot helps learners feel more confident working alongside a robot.</p>
+    </section>
 
-    <div class="section"></div>
-
-    <h1>Evaluation</h1>
-    <p>To evaluate our solution, we leveraged our relationships with our industry sponsors to collect human subjects for randomized control trials. Subjects were divided randomly into two groups: (1) a control group that watched a traditional video lecture and (2) an experimental group that took the TeachBot learning module. Both groups were given a pre- and post-test to evaluate how much they learned and how each learning method affected their self-efficacy regarding robotics.</p>
-    <div class="centered">
-        <img src="project-pages/teachbot-results.jpg" alt="Two plots showing improvement in self-efficacy and learning gain of the experimental group relative to the control group with p<0.05 and p<0.20, respectively">
-    </div>
-    <p>Our results demonstrate that <b>people learn significantly more from TeachBot</b> than they do from traditional video lectures. Furthermore, TeachBot helps learners feel more confident working alongside a robot.</p>
-
-    <div class="section"></div>
-
-    <h1>Moving Forward</h1>
-    <p>The results I've seen are extremely promising. My favorite anecdote from administering human subject tests is watching learners who have never interacted with a robot before evolve from fear and skepticism, observing the TeachBot from several yards away, into excitedly curious and confident explorers, playing with TeachBot's arm and exclaiming "Oh!" as they discover for themselves how a robot could help them do their jobs.</p>
-    <p>At present, we are deploying a prototype of the TeachBot system to our industry sponsors, primarily small and medium-sized manufacturers in the state of Massachusetts, and further developing the curriculum to meet the needs of diverse manufacturing sectors.</p>
-    <p>To learn more about the project, <a rel="external" href="https://www.sciencedirect.com/science/article/pii/S2405844021016868" target="_blank">read our paper</a> and <a href="project-pages/teachbot-poster.pdf" download>download our award-winning poster</a>. All of our software is open source on <a rel="external" aria-label="GitHub repository" href="https://github.com/Darbeloff/TeachBot">GitHub</a>.</p>
+    <section>
+        <h2>Moving Forward</h2>
+        <p>The results I've seen are extremely promising. My favorite anecdote from administering human subject tests is watching learners who have never interacted with a robot before evolve from fear and skepticism, observing the TeachBot from several yards away, into excitedly curious and confident explorers, playing with TeachBot's arm and exclaiming "Oh!" as they discover for themselves how a robot could help them do their jobs.</p>
+        <p>We successfully deployed prototypes of the TeachBot system to our industry sponsors, primarily small and medium-sized manufacturers and community colleges in the state of Massachusetts. Today, TeachBot is being used to train the future manufacturing workers of America.</p>
+        <p>To learn more about the project, <a rel="external" href="https://www.sciencedirect.com/science/article/pii/S2405844021016868" target="_blank">read our paper</a> and <a href="project-pages/teachbot-poster.pdf" download>download our award-winning poster</a>. All of our software is open source on <a rel="external" aria-label="GitHub repository" href="https://github.com/Darbeloff/TeachBot" target="_blank">GitHub</a>.</p>
+    </section>
     
 	<footer>
 		<p><a rel="license" target="_blank" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" target="_blank" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.</p>
