Mobile menu working

--- a/capstone.html
+++ b/capstone.html
@@ -36,7 +36,7 @@
         </ul>
     </header>
 
-    <main id="main">
+    <main>
         <div class="cover section">
             <img src="project-pages/capstone-cover.jpg" alt="A drone flying in the sky">
             <h1>​Aerial Mapping System for Urban Environments</h1>
