--- a/eqr.html
+++ b/eqr.html
@@ -36,7 +36,7 @@
         </ul>
     </header>
 
-    <main id="main">
+    <main>
         <div class="cover section">
             <img src="project-pages/eqr-cover.jpg" alt="A gloved hand holding a wallet and a card with a QR labeled 'Emergency Medical Information SCAN ME'">
             <h1>​Emergency QR</h1>
