--- a/gtsr.html
+++ b/gtsr.html
@@ -36,7 +36,7 @@
         </ul>
     </header>
 
-    <main id="main">
+    <main>
         <div class="cover section">
             <img src="project-pages/gtsr-cover.jpg" alt="A physical network implemented on breadboards">
             <h1>Solar Racing</h1>
