--- a/lowtemp.html
+++ b/lowtemp.html
@@ -36,7 +36,7 @@
         </ul>
     </header>
 
-    <main id="main">
+    <main>
         <div class="cover section">
             <img src="project-pages/lowtemp-cover.jpg" alt="Scenes from low-temperature physics experiments">
             <h1 class="lowtemp-title">Low Temperature Physics for Quantum Computing</h1>
