--- a/ndte.html
+++ b/ndte.html
@@ -36,7 +36,7 @@
         </ul>
     </header>
 
-    <main id="main">
+    <main>
         <div class="cover section">
             <img src="project-pages/ndte-cover.jpg" alt="Surface plot of acoustic wave propagation through aluminum and air">
             <h1>Nondestructive Testing</h1>
