--- a/rfind.html
+++ b/rfind.html
@@ -36,7 +36,7 @@
         </ul>
     </header>
 
-    <main id="main">
+    <main>
         <div class="cover section">
             <img src="project-pages/rfind-cover.jpg" alt="Hand holding smartphone showing a schematic of a living room">
             <h1>RFind</h1>
