--- a/teachbot.html
+++ b/teachbot.html
@@ -36,7 +36,7 @@
         </ul>
     </header>
 
-    <main id="main">
+    <main>
         <div class="cover section">
             <img src="project-pages/teachbot-cover.jpg" alt="A student interacting with a collaborative manufacturing robot">
             <h1>TeachBot</h1>
