--- a/rfly.html
+++ b/rfly.html
@@ -36,7 +36,7 @@
         </ul>
     </header>
 
-    <main id="main">
+    <main>
         <div class="cover section">
             <img src="project-pages/rfly-cover.jpg" alt="Drone with a mounted PCB">
             <h1>RFly</h1>
