--- a/tinynets.html
+++ b/tinynets.html
@@ -36,7 +36,7 @@
         </ul>
     </header>
 
-    <main id="main">
+    <main>
         <div class="cover section">
             <img src="project-pages/tinynets-cover.jpg" alt="A physical network implemented on breadboards">
             <h1 id="tinynets-title">​TinyNets: ​Lightweight Networking for Control Systems</h1>
